<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary"/>

        <!-- Akshay Chordiya -->
        <LinearLayout
            android:id="@+id/aboutTeamAkshay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical"
            android:padding="@dimen/baseline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_akshay_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_akshay_subtext"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

        <!-- Aditya Kamble -->
        <LinearLayout
            android:id="@+id/aboutTeamAditya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical"
            android:padding="@dimen/baseline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_aditya_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_aditya_subtext"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

        <!-- Piyush Mulik -->
        <LinearLayout
            android:id="@+id/aboutTeamPiyush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical"
            android:padding="@dimen/baseline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_piyush_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_piyush_subtext"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

        <!-- Marc -->
        <LinearLayout
            android:id="@+id/aboutTeamMarc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical"
            android:padding="@dimen/baseline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_marc_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/developer_marc_subtext"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>