<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_support"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/about_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@null"
            android:drawableLeft="@drawable/ic_rate"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableRight="@null"
            android:drawableStart="@drawable/ic_rate"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableLeft="@null"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableStart="@drawable/ic_email"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/about_report_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@null"
            android:drawableLeft="@drawable/ic_bug_report"
            android:drawablePadding="@dimen/about_item_drawable_padding"
            android:drawableRight="@null"
            android:drawableStart="@drawable/ic_bug_report"
            android:gravity="center_vertical"
            android:padding="@dimen/baseline"
            android:text="@string/about_report_bug"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>

</android.support.v7.widget.CardView>